--- a/ejemplos/ActivityControlesBasicos/AndroidManifest.xml
+++ b/ejemplos/ActivityControlesBasicos/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.sdecima.cursoandroid.ejemplos.activitycontrolesbasicos.MainActivity"
+            android:name="org.sdecima.cursoandroid.ejemplos.activitycontrolesbasicos.ActivityControlesBasicos"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
