--- a/ejemplos/ActivityIntentoCamaraSaveInstanceState/AndroidManifest.xml
+++ b/ejemplos/ActivityIntentoCamaraSaveInstanceState/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.sdecima.cursoandroid.ejemplos.activityintentocamara.ActivityIntentoCamara"
+            android:name="org.sdecima.cursoandroid.ejemplos.activityintentocamara.ActivityIntentoCamaraSaveInstanceState"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
