--- a/ejercicios/CalculoDePropinas/CalculoDePropinas_2/AndroidManifest.xml
+++ b/ejercicios/CalculoDePropinas/CalculoDePropinas_2/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.sdecima.cursoandroid.ejercicios.calculodepropinas_2"
+    package="org.sdecima.cursoandroid.ejercicios.calculodepropinas"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.sdecima.cursoandroid.ejercicios.calculodepropinas_2.CalculoDePropina_2"
+            android:name="org.sdecima.cursoandroid.ejercicios.calculodepropinas.CalculoDePropina_2"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="ActivityResultado"></activity>
+        <activity android:name="org.sdecima.cursoandroid.ejercicios.calculodepropinas.ActivityResultado"></activity>
     </application>
 
 </manifest>
